Copy paste into the title bar doesn't work
When I copy a text into the clipboard and then try to paste it into the title bar of a note, the text gets post-pended to the current text of that note. (I'm not sure what the etiquette is for reporting issues here, so if I need to include more information please let me know)
Version
$ bijiben --version
GNOME Notes 3.38.0
Edited by Luuk Wester