webkit-editor: remove unneeded paste shortcut codes

This caused the issue that if you paste something to the title entry,
they are pasted to the note content instead.

https://gitlab.gnome.org/GNOME/gnome-notes/-/issues/163