src/bjb-application.c
@@ -277,7 +277,6 @@ bijiben_startup (GApplication *application)
 
   const gchar *vaccels_close[] = {"<Primary>w", NULL};
   const gchar *vaccels_detach[] = {"<Primary>d", NULL};
-  const gchar *vaccels_paste[] = {"<Primary>v", NULL};
   const gchar *vaccels_redo[] = {"<Primary><Shift>z", NULL};
   const gchar *vaccels_undo[] = {"<Primary>z", NULL};
   const gchar *vaccels_trash[] = {"<Primary>Delete", NULL};
@@ -291,7 +290,6 @@ bijiben_startup (GApplication *application)
 
   gtk_application_set_accels_for_action (GTK_APPLICATION (application), "win.close", vaccels_close);
   gtk_application_set_accels_for_action (GTK_APPLICATION (application), "win.detach-window", vaccels_detach);
-  gtk_application_set_accels_for_action (GTK_APPLICATION (application), "win.paste", vaccels_paste);
   gtk_application_set_accels_for_action (GTK_APPLICATION (application), "win.redo", vaccels_redo);
   gtk_application_set_accels_for_action (GTK_APPLICATION (application), "win.undo", vaccels_undo);
   gtk_application_set_accels_for_action (GTK_APPLICATION (application), "win.trash", vaccels_trash);
