src/editor/biji-webkit-editor.h
@@ -52,8 +52,6 @@ void biji_webkit_editor_apply_format (BijiWebkitEditor *self, gint format);
 
 const gchar * biji_webkit_editor_get_selection (BijiWebkitEditor *self);
 
-void biji_webkit_editor_paste (BijiWebkitEditor *self);
-
 void biji_webkit_editor_undo (BijiWebkitEditor *self);
 void biji_webkit_editor_redo (BijiWebkitEditor *self);
 
